Time: 1 ms (88.82%) | Memory: 42.2 MB (18.28%) - LeetSync